# ui-test-generator

./: .gitignore  README.md
python_mvp/: AZURE_OPENAI_SETUP.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  azure_openai_example.env  env.example  pyproject.toml  screen_recorder_voiceover.py  setup.py
python_mvp/examples/: quick_demo.py
python_mvp/utils/: __init__.py  screen_recorder.py
screen-recorder-webapp/: .gitignore  README.md  package-lock.json  package.json
screen-recorder-webapp/prompts/: README.md  ui-test-generation.md
screen-recorder-webapp/src/app/: page.tsx
screen-recorder-webapp/src/app/api/analyze-video/: route.ts
screen-recorder-webapp/src/components/: ScreenRecorder.tsx
